include streamlit in docker-compose

--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -18,11 +18,11 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     location / {
-        proxy_pass http://172.17.0.1:8501/; #for demo purposes
+        proxy_pass http://streamlit:8501/; #for demo purposes
     }
 
     location /stream { 
-        proxy_pass http://172.17.0.1:8501/stream;
+        proxy_pass http://streamlit:8501/stream;
         proxy_http_version 1.1; 
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
