change streamlit docker to not git pull inside; rather use external volume

--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -20,5 +20,8 @@ services:
     mem_limit: 40m
   streamlit:
     image: danroozemond/octodeco
+    volumes:
+      - ./data/git-master:/app2
     mem_limit: 300m
+    command: [ "streamlit", "run", "/app2/octo-deco/run_streamlit_ui.py" ]
 
