--- a/config/docker-octo-deco/Dockerfile
+++ b/config/docker-octo-deco/Dockerfile
@@ -3,5 +3,5 @@ FROM python:3.8.2-buster
 COPY data /app
 RUN pip install -r /app/requirements.txt
 
-CMD ["bash", "/app/go.sh"]
+CMD [ "streamlit", "run", "/app2/octo-deco/run_streamlit_ui.py" ]
 
