modify docker compose, getting ready for flask and moving git-master tree out of config into home dir

--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -21,7 +21,8 @@ services:
   streamlit:
     image: danroozemond/octodeco
     volumes:
-      - ./data/git-master:/app2
+      - ~/git-master:/app2
+      - ~/flask_instance:/flask_instance
     mem_limit: 300m
     command: [ "streamlit", "run", "/app2/octo-deco/run_streamlit_ui.py" ]
 
