--- a/config/docker-flask/Dockerfile
+++ b/config/docker-flask/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.8.2-buster
 COPY data /data
 RUN pip install -r /data/requirements.txt
 
+COPY scripts /scripts
+
 # Idea is that you map the right drives and then run_flask.sh
 CMD [ "/bin/bash" ]
 
