--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -18,11 +18,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     location / {
-        proxy_pass http://streamlit:8501/; #for demo purposes
-    }
-
-    location /stream { 
-        proxy_pass http://streamlit:8501/stream;
+        proxy_pass http://flask:5000/;
         proxy_http_version 1.1; 
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
