--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     mem_limit: 40m
   flask:
     image: danroozemond/octo-deco-uwsgi
+    ports:
+      - "9191:9191"
     volumes:
       - ~/git-master/octo-deco:/octo-deco
       - ~/flask_instance:/flask_instance
