--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - ~/flask_instance:/flask_instance
       - ../docker-flask/scripts:/scripts
     mem_limit: 300m
-    command: "/bin/sh -c '/scripts/run_uwsgi.sh'"
+    command: "/bin/sh -c '/scripts/run_uwsgi_ini.sh'"
     #command: "/bin/sh -c '/scripts/run_flask_init.sh'"
     #command: "/bin/sh -c 'sleep 6h'"
 
