add "cheaper" mode to uwsgi

--- a/config/docker-flask/scripts/uwsgi.ini
+++ b/config/docker-flask/scripts/uwsgi.ini
@@ -4,8 +4,17 @@ master = true
 chdir = /octo-deco/octodeco
 processes = 4
 threads = 2
-stats = :9191
 mount = /=flaskr:app
 uid = www-data
 gid = www-data
+# Stats server
+stats = :9191
+# "Cheaper" subsystem: dynamically adjust workers
+cheaper-algo = spare
+cheaper = 2
+cheaper-initial = 5
+workers = 10 
+memory-report = true
+cheaper-rss-limit-soft = 250000000
+cheaper-rss-limit-hard = 270000000
 
