UWSGI: Set harakiri timeout

--- a/config/docker-flask/scripts/uwsgi.ini
+++ b/config/docker-flask/scripts/uwsgi.ini
@@ -4,6 +4,7 @@ master = true
 chdir = /octo-deco/octodeco
 processes = 4
 threads = 2
+harakiri = 30
 mount = /=flaskr:app
 uid = www-data
 gid = www-data
