--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -28,6 +28,6 @@ services:
       - ../docker-flask/scripts:/scripts
     mem_limit: 500m
     command: "/bin/sh -c '/scripts/run_uwsgi_ini.sh'"
-    #command: "/bin/sh -c '/scripts/run_flask_init.sh'"
+    #command: "/bin/sh -c '/scripts/run_flask_cmd.sh'"
     #command: "/bin/sh -c 'sleep 6h'"
 
