UWSGI now using file system cache (works better across threads). plus assorted small settings in nginx and uwsgi

--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -1,3 +1,5 @@
+error_log stderr warn;
+
 server {
     listen 80;
     server_name octo-deco.nl;
@@ -11,6 +13,8 @@ server {
 server {
     listen 443 ssl;
     server_name octo-deco.nl;
+
+    access_log /dev/null;
 
     ssl_certificate /etc/letsencrypt/live/octo-deco.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/octo-deco.nl/privkey.pem;
