--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ instance
 cache
 /octodeco/deco/TissueStateClassic.c
 /octodeco/deco/TissueStateNumpy.c
+/octodeco/deco/TissueStateCython.c
+/octodeco/deco/TissueStateCython.html
