change nginx config to refuse requests with wrong/missing domain name

--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -2,7 +2,7 @@ error_log stderr warn;
 
 server {
     listen 80;
-    server_name octo-deco.nl;
+    server_name octo-deco.nl *.octo-deco.nl;
     location / {
         return 301 https://$host$request_uri;
     }    
@@ -12,7 +12,7 @@ server {
 }
 server {
     listen 443 ssl;
-    server_name octo-deco.nl;
+    server_name octo-deco.nl *.octo-deco.nl;
 
     access_log /dev/null;
 
@@ -34,3 +34,22 @@ server {
     }
 }
 
+#
+# Default fallback
+#
+server {
+    listen 80;
+    server_name ~^.*$;
+    return 444;
+}
+server {
+    listen 443 ssl;
+    server_name ~^.*$;
+
+    ssl_certificate /etc/letsencrypt/live/octo-deco.nl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/octo-deco.nl/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    return 444;
+}
