--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -18,19 +18,29 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/octo-deco.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/octo-deco.nl/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
+    # ssl: ciphers and protocols
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+    #ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    # ssl: caching
+    ssl_session_cache   shared:SSL:40m;
+    ssl_session_timeout 4h;
+
     location / {
         proxy_pass http://flask:5000/;
         proxy_http_version 1.1; 
+        proxy_read_timeout 86400;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_read_timeout 86400;
+	# ssl: hsts
+	add_header Strict-Transport-Security "max-age=63072000; includeSubdomains;";
     }
 }
 
