--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -18,13 +18,12 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/octo-deco.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/octo-deco.nl/privkey.pem;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     # ssl: ciphers and protocols
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-    #ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA2586:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256";
+    ssl_ecdh_curve X25519:secp384r1;
     # ssl: caching
     ssl_session_cache   shared:SSL:40m;
     ssl_session_timeout 4h;
@@ -39,8 +38,12 @@ server {
 	proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-	# ssl: hsts
+	# nice to have for added security
 	add_header Strict-Transport-Security "max-age=63072000; includeSubdomains;";
+	add_header X-Frame-Options "DENY";
+	add_header X-Content-Type-Options "nosniff";
+	add_header X-XSS-Protection "1; mode=block";
+	add_header Referrer-Policy "same-origin";
     }
 }
 
