activate ocsp stapling; modify letsencrypt script to include ocsp stapling (and remove now unused nginx openssl params)

--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -27,6 +27,11 @@ server {
     # ssl: caching
     ssl_session_cache   shared:SSL:40m;
     ssl_session_timeout 4h;
+    # ocsp stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    ssl_trusted_certificate /etc/letsencrypt/archive/lets-encrypt-x3-cross-signed.pem;
+
 
     location / {
         proxy_pass http://flask:5000/;
