fix ocsp stapling

--- a/config/docker-compose/data/nginx/app.conf
+++ b/config/docker-compose/data/nginx/app.conf
@@ -30,6 +30,7 @@ server {
     # ocsp stapling
     ssl_stapling on;
     ssl_stapling_verify on;
+    resolver 8.8.8.8;
     ssl_trusted_certificate /etc/letsencrypt/archive/lets-encrypt-x3-cross-signed.pem;
 
 
