--- a/config/docker-compose/docker-compose.yml
+++ b/config/docker-compose/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   nginx:
     image: nginx:1.15-alpine
+    restart: always
     ports:
       - "80:80"
       - "443:443"
@@ -13,6 +14,7 @@ services:
     mem_limit: 40m
   certbot:
     image: certbot/certbot
+    restart: always
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
@@ -20,6 +22,7 @@ services:
     mem_limit: 40m
   flask:
     image: danroozemond/octo-deco-uwsgi
+    restart: always
     ports:
       - "127.0.0.1:9191:9191"
     volumes:
