--- a/config/docker-flask/data/requirements.txt
+++ b/config/docker-flask/data/requirements.txt
@@ -2,8 +2,8 @@ pandas
 numpy
 plotly
 # Werkzeug issue with flask 2.0.1
-flask=1.1.4
-Flask-Caching=1.10.1
+flask==1.1.4
+Flask-Caching==1.10.1
 click
 uwsgi
 oauthlib
