--- a/config/docker-flask/Dockerfile
+++ b/config/docker-flask/Dockerfile
@@ -3,6 +3,6 @@ FROM python:3.9.5-buster
 COPY data /data
 RUN pip install -r /data/requirements.txt
 
-# Idea is that you map the right drives and then /scripts/run_flask.sh
+# Idea is that you map the right drives in docker-compose and then use /scripts/run_...
 CMD [ "/bin/bash" ]
 
