it seems to work :) still not sure what to do with the Cython module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 requires = [
     "setuptools>=42",
     "cython",
-    "numpy"
+    "numpy",
+    "wheel"
 ]
 build-backend = "setuptools.build_meta"
