--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
 global-include octodeco/**.pyx
+global-exclude octodeco/flaskr/**
+global-exclude octodeco/db/**
+global-exclude octodeco/test.py
+global-exclude venv/**
