--- a/config/docker-flask/data/requirements.txt
+++ b/config/docker-flask/data/requirements.txt
@@ -1,9 +1,9 @@
+# If you modify this, you perhaps also need to modify setup.py
 pandas
 numpy
 plotly
-# Werkzeug issue with flask 2.0.1
-flask==1.1.4
-Flask-Caching==1.10.1
+flask
+Flask-Caching
 click
 uwsgi
 oauthlib
