--- a/config/docker-flask/Dockerfile
+++ b/config/docker-flask/Dockerfile
@@ -1,6 +1,7 @@
-FROM python:3.9.5-buster
+FROM python:3.9-buster
 
 COPY data /data
+RUN pip install --upgrade pip setuptools wheel
 RUN pip install -r /data/requirements.txt
 
 # Idea is that you map the right drives in docker-compose and then use /scripts/run_...
