--- a/config/docker-flask/scripts/uwsgi.ini
+++ b/config/docker-flask/scripts/uwsgi.ini
@@ -1,11 +1,11 @@
 [uwsgi]
 http-socket = :5000
 master = true
-chdir = /octo-deco/octodeco
+chdir = /octo-deco
 processes = 4
 threads = 2
 harakiri = 30
-mount = /=flaskr:app
+mount = /=octodeco:flaskr_app
 uid = www-data
 gid = www-data
 # Stats server
