change Flask app definition, so that the full app is not loaded when the library is loaded, but only when create_flaskr_app is called.

--- a/config/docker-flask/scripts/uwsgi.ini
+++ b/config/docker-flask/scripts/uwsgi.ini
@@ -5,7 +5,7 @@ chdir = /octo-deco
 processes = 4
 threads = 2
 harakiri = 30
-mount = /=octodeco:flaskr_app
+mount = /=octodeco:create_flaskr_app()
 uid = www-data
 gid = www-data
 # Stats server
